--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,8 +4,8 @@ certifi==2020.11.8
 click==7.1.2
 distlib==0.3.1
 filelock==3.0.12
-Flask==1.1.2
 gunicorn==20.0.4
+install==1.3.4
 isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
